--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-sign-y.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-sign-y.html
@@ -3,6 +3,7 @@
         <div>
             <p>乙方（公章或合同专用章）：<strong><u>{{ custom.name }}</u></strong></p>
             <p>法定代表人（或授权代理人）：<strong><u>{{ custom.company_custome.representative }}</u></strong></p>
+            <p>（签字或盖章）</p>
         </div>
     {% endfor %}
 {% else %}
