--- a/A_dbms/templates/dbms/agree/agree_board/counter/g/g-appendix.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/g/g-appendix.html
@@ -162,8 +162,8 @@
 <p>
 <div class="row">
     <div class="col-lg-6 col-xs-6">填表人：</div>
-    <div class="col-lg-6 col-xs-6">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp年
-        &nbsp&nbsp&nbsp&nbsp月&nbsp&nbsp&nbsp&nbsp日
+    <div class="col-lg-6 col-xs-6">&nbsp&nbsp&nbsp&nbsp&nbsp年
+        &nbsp&nbsp月&nbsp&nbsp日
     </div>
 </div>
 </p>
