--- a/A_dbms/templates/dbms/appraisal/appraisal-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan.html
@@ -7,6 +7,9 @@
         {% include 'dbms/appraisal/modl/comment-add-mod.html' %}
         {% include 'dbms/appraisal/modl/single-add-mod.html' %}
         {% include 'dbms/appraisal/modl/single-del-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-add-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-edit-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-del-mod.html' %}
         {% include 'dbms/appraisal/modl/lending-add-mod.html' %}
         {% include 'dbms/appraisal/modl/lending-del-mod.html' %}
         {% include 'dbms/appraisal/modl/article-sign-mod.html' %}
@@ -15,6 +18,9 @@
 {% endblock %}
 {% block extra-js %}
     {% include 'dbms/appraisal/extra/js-comment-add.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-add.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-edit.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-del.html' %}
     {% include 'dbms/appraisal/extra/js-single-add.html' %}
     {% include 'dbms/appraisal/extra/js-single-del.html' %}
     {% include 'dbms/appraisal/extra/js-lending-add.html' %}
