--- a/A_dbms/templates/dbms/appraisal/extra/js-single-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-single-add.html
@@ -38,7 +38,7 @@
                         alert(dict.message);
                         $('#e_credit_model').text(dict.forme.credit_model);
                         $('#e_credit_amount').text(dict.forme.credit_amount);
-                        $('#id_flow_rate').text(dict.forme.flow_rate);
+                        $('#e_flow_rate').text(dict.forme.flow_rate);
                     }
                 }
             })
