--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
@@ -7,6 +7,7 @@
                    href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">意见书</a><!--#path(' '-->
                 <a class="btn btn-primary btn-sm " id="signScan" target="_blank"
                    href="{% url 'dbms:appraisal_sign_scan' article_id=article_obj.id %}">签批单</a><!--#path(' '-->
+                <a class="btn btn-primary btn-sm " id="addSupplyB">补调问题</a>
                 <a class="btn btn-primary btn-sm " id="singleQuota">单项额度</a><!--#path('appraisal/single/add/'-->
                 <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
                 <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
