--- a/A_dbms/static/dbms/css/summary-sign-style.css
+++ b/A_dbms/static/dbms/css/summary-sign-style.css
@@ -1,29 +1,33 @@
 body {
     /*padding-top: 10pt;*/
     font-family: SimSun;
+    /*background-image:url("../images/agree_dark_line.png");*/
 }
 
 .contain {
-    /*{#宽度#} */
+    /*宽度*/
     width: 188mm;
-    /*{#左空白#} */
+    /*左空白*/
     margin-left: auto;
-    /*{#又空白#} */
+    /*又空白*/
     margin-right: auto;
-    /*{#字体大小#} */
+    /*字体大小*/
     font-size: 16pt;
-    /*{#背景色 #} */
-    background-color: #dddddd;
-    /*{#字间距 #} */
+    /*背景色*/
+    /*background-color: #dddddd;*/
+    /*字间距*/
     letter-spacing: 0pt;
-    /*{#行间距#}*/
-    line-height: 40pt;
+    /*行间距#}*/
+    line-height: 35pt;
+    /*background-image: url("../images/agree_dark_line.png");*/
+    /*background-repeat: repeat-y;*/
 }
 
 .headline {
     text-align: center;
-    font-weight: bold;
+    font-weight: bolder;
     line-height: 18pt;
+    padding-top: 50pt;
     /*color: red;*/
     margin-bottom: 20pt;
 }
@@ -31,24 +35,20 @@ body {
 .headline-1 {
     font-size: 28pt;
     margin-bottom: 18pt;
+    font-weight: bolder;
     color: red;
-    transform: scale(1, 2);
+    transform: scale(1, 3);
 }
 
 .headline-2 {
+    padding-top: 30pt;
     font-size: 22pt;
+    font-weight: bolder;
+    color: red;
 }
 
 /*{#tr td {#}*/
 /*{#    border: 1px solid black;#}*/
 .bb2 {
     border: 2pt solid black;
-}
-
-.bl {
-    border-left: 1pt solid black;
-}
-
-.style0 {
-    border-top: none;
 }
