--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
@@ -17,10 +17,13 @@
 <p><strong>声明：甲方已采取合理方式提请乙、丙方注意本合同项下免除或限制其责任的条款，应乙方要求，甲方已经就本
     合同做了相应的条款说明。甲、乙、丙三方对本合同所有条款内容的理解不存在异议。</strong></p>
 
-<div class="row">
-    <div class="col-lg-6 col-xs-6 col-md-6 col-sm-6 col-xs-6">
-        <p><strong>乙方确认签章：</strong></p>
-        <p>
+<table style="margin-top: 15pt">
+    <tr style="height: 30pt">
+        <td style="border: none" width="50%"><strong>乙方确认签章：</strong></td>
+        <td style="border: none"><strong>丙方确认签章：</strong></td>
+    </tr>
+    <tr style="height: 30pt">
+        <td style="border: none">
             {% if counter_typ in X_COUNTER_TYP_LIST %}
                 {% for custom in counter_obj.assure_counter.custome.all %}
                     <strong><u>{{ custom.name }}</u></strong>
@@ -63,10 +66,9 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-        </p>
-    </div>
-    <div class="col-lg-6 col-xs-6 col-md-6 col-sm-6 col-xs-6">
-        <p><strong>丙方确认签章：</strong></p>
-        <p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
-    </div>
-</div>
+        </td>
+        <td style="border: none">
+            <strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>
+        </td>
+    </tr>
+</table>
