--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/d-appendix-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/d-appendix-1.html
@@ -19,7 +19,7 @@
 {#WARRANT_TYP_LIST = [#}
 {#        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#        (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-<table>
+<table cellspacing="0" cellpadding="0" >
     {% for warrant in counter_obj.warrant_counter.warrant.all %}
         {% if warrant.warrant_typ == 1 or warrant.warrant_typ == 2 %}
             {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-1.html' %}
