--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
@@ -5,16 +5,13 @@
     {#WARRANT_TYP_LIST = [#}
     {#        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
     {#        (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-    <table>
+    <table cellspacing="0" cellpadding="0">
         <tr>
             <td colspan="4">
-                质押权人（甲方）：成都武侯中小企业融资担保有限责任公司<br>
-                出质人（乙方）：
-                {% for warrant in counter_obj.warrant_counter.warrant.all %}
-                    {% if forloop.first %}
-                        <strong><u>{{ warrant.receive_warrant.receive_owner.name }}</u></strong>
-                    {% endif %}
-                {% endfor %}
+                <p style="text-indent: 0pt;">质押权人（甲方）：成都武侯中小企业融资担保有限责任公司</p>
+                <p style="text-indent: 0pt;">
+                    出质人（乙方）：<strong><u>{{ counter_obj.warrant_counter.warrant.all.0.receive_warrant.receive_owner.name }}</u></strong>
+                </p>
             </td>
         </tr>
         <tr>
@@ -25,7 +22,7 @@
                     收账款质押给甲方，为甲方提供质押反担保，质押权金额为人
                     民币<strong><u>{{ agree_amount_cn }}</u></strong></p>
                 <p>2、应收账款质押明细表（包含但不限于下表所列的全部应收账款）</p>
-                <table>
+                <table cellspacing="0" cellpadding="0">
                     <tr>
                         <td align="center">应收单位名称</td>
                         <td align="center">质押金额(万元)</td>
@@ -101,25 +98,20 @@
         <tr>
             <td>甲乙双方就登记事项达成的《登记协议》（见右）</td>
             <td colspan="3">
-                <p>1、甲乙双方已签订<strong><u>{{ counter_obj.counter_num }}</u></strong>的
+                <p style="line-height: 19pt;">1、甲乙双方已签订<strong><u>{{ counter_obj.counter_num }}</u></strong>的
                     <strong><u>《{{ counter_obj.get_counter_name_display }}》</u></strong>。</p>
-                <p>2、双方约定乙方授权甲方全权办理该合同的质押登记手续，如甲方在登记过程中发生登记
+                <p style="line-height: 19pt;">2、双方约定乙方授权甲方全权办理该合同的质押登记手续，如甲方在登记过程中发生登记
                     错误（包括但不限于：根据作废了的合同、协议进行了登记;登记事项与实际情况不符;乙方
                     授权甲方填写合同或协议的部分要件[如：签字时间、涉及的合同编号等]补记，乙方补记错误
                     或根据未补记的合同或协议进行了登记）。乙方授权甲方可以根据实际情况进行更正登记。</p>
-                <p>3、乙方已告知甲方，最近四个月内，企业使用过的所有名称为：
-                    {% for warrant in counter_obj.warrant_counter.warrant.all %}
-                        {% if forloop.first %}
-                            <strong><u>{{ warrant.receive_warrant.receive_owner.name }}</u></strong>
-                        {% endif %}
-                    {% endfor %}</p>
+                <p style="line-height: 19pt;">3、乙方已告知甲方，最近四个月内，企业使用过的所有名称为：<strong><u>{{ counter_obj.warrant_counter.warrant.all.0.receive_warrant.receive_owner.name }}</u></strong>
+                   </p>
             </td>
         </tr>
         <tr>
             <td rowspan="8">合同情况</td>
             <td style="width: 40%" align="center">
-                《&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》编号:
+                《&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》编号:
             </td>
             <td style="width: 10%" align="center">币种</td>
             <td style="width: 40%" align="center">借款金额</td>
@@ -131,8 +123,7 @@
         </tr>
         <tr>
             <td align="center">
-                《&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》编号：
+                《&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》编号：
             </td>
             <td align="center">币种</td>
             <td align="center">借款金额</td>
