--- a/A_dbms/templates/dbms/agree/preview-sign.html
+++ b/A_dbms/templates/dbms/agree/preview-sign.html
@@ -3,11 +3,11 @@
 {% block title %}{{ agree_obj.agree_num }}{% endblock %}
 {% block extra-css %}
 {#    {% include 'dbms/agree/agree_board/style.html' %}#}
-    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style.css' %}">
-    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style.css' %}">
+    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-sign-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-sign-style.css' %}">
 {% endblock %}
 {% block body %}
-    <div class="sing-tab">
+    <div class="sign-tab">
         <div class="split">
             <div style="font-size: 18pt">
                 <p align="center"><strong>成都武侯中小企业融资担保有限责任公司</strong></p>
